--- a/.github/workflows/development_branch.yml
+++ b/.github/workflows/development_branch.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Pull to Development - Run Tests
+name: Pull to Development branch
 
 on:
   pull_request:
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v2
       - name: Set up JDK 14
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
           java-version: 14
       - name: Cache Maven packages
