--- a/.github/workflows/main_branch.yml
+++ b/.github/workflows/main_branch.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Pull to Main - Run Tests & Build
+name: Pull to Main branch
 
 on:
   pull_request:
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v2
       - name: Set up JDK 14
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
           java-version: 14
       - name: Cache Maven packages
@@ -25,17 +25,27 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Run tests with Maven
         run: mvn -B test --file pom.xml
-  # build:
-
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #   - name: Set up JDK 11
-  #     uses: actions/setup-java@v2
-  #     with:
-  #       java-version: '11'
-  #       distribution: 'temurin'
-  #       cache: maven
-  #   - name: Build with Maven
-  #     run: mvn -B package --file pom.xml
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    # - uses: actions/checkout@v2
+    # - name: Set up JDK 11
+    #   uses: actions/setup-java@v2
+    #   with:
+    #     java-version: '14'
+    #     distribution: 'temurin'
+    #     cache: maven
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+    # - uses: actions/checkout@v2
+    # - name: Set up JDK 11
+    #   uses: actions/setup-java@v2
+    #   with:
+    #     java-version: '14'
+    #     distribution: 'temurin'
+    #     cache: maven
+    - name: Upload artifacts to GitHub registry
+      run: mvn -B package --file pom.xml
