--- a/.github/workflows/development_branch.yml
+++ b/.github/workflows/development_branch.yml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: 14
+          distribution: 'temurin'
+          cache: maven
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
